fix button nav alignment issue

--- a/client/app/styles/button.styl
+++ b/client/app/styles/button.styl
@@ -58,7 +58,7 @@ button,
   text-align center
   margin-bottom $row-margin-bottom
   @media (min-width $bp-sm)
-    text-align left
+    text-align center
 
 .button-view-nav a
   clear both
